src/test/deca/context/invalid/created/binary_exp/op_bool/or_int_int.deca
// Description :
//    test or entre un int et un int
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 12: (3.33) Type gauche int. Type droit int Type attendu: ‘boolean’
class A{}
{
int a;
int b;
boolean c = a || b;
}
